style.css
*, 
::before, 
::after{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body{
    max-width: 1470px;
    max-height: 100%;
    padding-left: 10px;
   
}
header{
    /*navigation*/
    display: flex;
    background-color: rgb(250, 164, 181);
    align-items: center;
    justify-content: space-between;
    padding: 40px;
    height: 2rem;
}
.navbar ul{
    list-style-type: none; 
    display: flex; /* displays lists in a row  */
}
.navbar a{
    background-color: antiquewhite;
    text-decoration: none; /*Removes the underline*/
    padding: 15px;
    color: hotpink; /*Changes text color*/
}
.navbar a:hover{
    background-color: rgb(248, 183, 124) ;
}
.intro{
    /*parent container: home*/
    background-color: rgb(233, 225, 170);
    padding: 40px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap:30px;  
    height: 500px;
}
.my-name{
    display: flex;
    flex-direction: column;
    gap: 10px;
}
button a{
    text-decoration: none;
    color: rgb(241, 68, 163);
    font-size: 15px;
}
button:hover{
    background-color: rgb(248, 183, 124); /*Changes color when mouse hovers  */
}

.profile-img{
    width: 50%;
    max-width: 100px;
    object-fit: cover;
    border-radius: 50%;
    margin: 0 auto; 
}
.About{
    /*parent div: About*/
    height: 450px;
    background-color: rgb(239, 187, 216);
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 180px;
}
.overview{
    width: 600px;
    padding: 10px;
}
.overview p{
    margin-bottom: 15px;
    line-height: 1;
}
.about-img{
    width: 300px;
    height: 400px;
    display: flex;

}
.Hobbies{
    background-color: #c3c7f4;
    padding: 40px;
    height: 950px;
}

.grid-container{
    border: 5px solid rgb(108, 161, 240);
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-auto-rows: auto;
    gap: 1em;
    grid-template-areas: 
    "image-1 image-3 image-3 image-7"
    "image-2 image-4 image-5 image-6"; 
    /*grid image arrangement */
}
.grid-container img{
    width: 100%;
    height: 400px;
    object-fit: cover;/*fills without distorting*/
}
.contact-info{
    height: 200px;
    padding: 40px;
    background-color: rgb(194, 176, 219);
    display: flex;
    flex-direction: column;
    align-items: center;
    list-style-type: none;
}
.contact-info a{
    text-decoration: none;
    color: #cf08c5;
}
.contact{
    background-color: azure;
    width: 600px;
    padding: 40px;
    padding-top: 0;
    padding-bottom: 10px;
    text-align: center;   /*aligns text centrally  */
}
.contact ul{
    list-style-type: none; /* Removes bullet points  */
}

